# econwar

./: .env.example  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/commands/: mod.rs
crates/core/src/engine/: matching.rs  mod.rs  pricing.rs  production.rs  simulation.rs
crates/core/src/models/: company.rs  market.rs  mod.rs  player.rs  production.rs  resource.rs  transaction.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial_schema.sql
crates/db/src/: lib.rs  repo.rs  seed.rs
crates/server/: Cargo.toml
crates/server/src/: db_writer.rs  game_loop.rs  handler.rs  main.rs  state.rs
crates/server/src/api/: auth.rs  command.rs  company.rs  market.rs  mod.rs
crates/server/src/middleware/: mod.rs
crates/server/src/ws/: mod.rs
crates/tui/: Cargo.toml
crates/tui/src/: api.rs  app.rs  commands.rs  main.rs  ui.rs
docs/: ARCHITECTURE.md
scripts/: create_tui.sh  patch_scrolling.sh  setup_db.sh
