[package]
name = "econwar-server"
version.workspace = true
edition.workspace = true

[dependencies]
econwar-core = { path = "../core" }
econwar-db = { path = "../db" }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
futures-util = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "json"] }
bb8-redis = "0.15" # Für Connection Pooling